--- a/package.json
+++ b/package.json
@@ -129,9 +129,9 @@
     ".": {
       "node": null,
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.min.mjs",
-      "require": "./dist/index.min.js",
-      "default": "./dist/index.min.js"
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.mjs",
+      "default": "./dist/index.mjs"
     },
     "./es": {
       "node": null,
