修改版本号

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "fabric",
+  "name": "fabric-editor",
   "description": "Object model for HTML5 canvas, and SVG-to-canvas parser. Backed by jsdom and node-canvas.",
   "homepage": "http://fabricjs.com/",
-  "version": "6.6.2",
+  "version": "1.0.0",
   "author": "Juriy Zaytsev <kangax@gmail.com>",
   "contributors": [
     {
