--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,9 +29,9 @@
     "moduleResolution": "node" /* Specify how TypeScript looks up a file from a given module specifier. */,
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     "paths": {
-      "fabric": ["./index"],
-      "fabric/node": ["./index.node"],
-      "fabric/extensions": ["./extensions/index"]
+      "fa-editor": ["./index"],
+      "fa-editor/node": ["./index.node"],
+      "fa-editor/extensions": ["./extensions/index"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
